serde_with/tests/trybuild/schemars_0_8/fail.conditional_derive_disabled.stderr
error[E0277]: the trait bound `Conditional: JsonSchema` is not satisfied
  --> tests/trybuild/schemars_0_8/fail.conditional_derive_disabled.rs:17:36
   |
17 |     assert_implements_jsonschema::<Conditional>();
   |                                    ^^^^^^^^^^^ the trait `JsonSchema` is not implemented for `Conditional`
   |
   = help: the following other types implement trait `JsonSchema`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `assert_implements_jsonschema`
  --> tests/trybuild/schemars_0_8/fail.conditional_derive_disabled.rs:14:36
   |
14 | fn assert_implements_jsonschema<T: JsonSchema>() {}
   |                                    ^^^^^^^^^^ required by this bound in `assert_implements_jsonschema`
